# artefact_case

./: .env.example  README.md  conversation1.md  conversation2.md  conversation3.md  conversation4.md  conversation5.md  main.py  pyproject.toml  requirements.txt
data/chroma_db_storage/: chroma.sqlite3
data/sql_db/: music_store.db
data/vector_db/chroma_db_storage/: chroma.sqlite3
src/agents/: agent.py
src/agents/prompts/: system_prompt.py
src/data_processing/: models.py  schemas.py  sql_database.py  vector_database.py
src/notebooks/: get_slash_conversation.ipynb
src/tools/: rag_tool.py  sql_tool.py
src/utils/: settings.py  storage.py
