[project]
name = "artefact-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "pdfplumber>=0.11.10",
    "python-dotenv>=1.2.2",
]
